--- a/gb/news2007_4.md
+++ b/gb/news2007_4.md
@@ -1,4 +1,7 @@
 <a name="1" id="1" target="_blank">&nbsp;</a> <span id="1">&nbsp;</span><table border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/mthry289/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/mthry289/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/mthry289/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/mthry289/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/mthry289/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/mthry289/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/mthry289/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/mthry289/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/mthry289/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/mthry289/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/mthry289/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/mthry289/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/mthry289/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/mthry289/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/mthry289/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/mthry289/www/master/t/djy/9.jpg" title="健康"><a href="https://www.youlucky.com"><img src="https://raw.githubusercontent.com/mthry289/www/master/t/djy/10.jpg" title="购物"></a><a href="https://donate.epochtimes.com/?utm_medium=epochtimes&utm_source=referral&utm_campaign=donate_button_djyarticleheader"><img src="https://raw.githubusercontent.com/mthry289/www/master/t/djy/12.jpg" title="捐款"></a></td></tr><tr><td colspan="2" VALIGN=TOP><p><a href="http://san4.hua.midnightchannel.net/hua/7" rel="nofollow">大纪元</a> | <a href="http://san4.hua.midnightchannel.net/hua/513" rel="nofollow">动态网</a> | <a href="https://git.io/fjHpv" rel="nofollow">神州</a> | <a href="http://san4.hua.midnightchannel.net/hua/8" rel="nofollow">退党</a> | <a href="https://git.io/fjHpU" rel="nofollow">九评</a> | <a href="https://git.io/fjHpT" rel="nofollow">网门</a> | <a href="http://san4.hua.midnightchannel.net/hua/4" rel="nofollow">神韵</a> | <a href="https://git.io/fjHpI" rel="nofollow">新纪元</a> | <a href="http://san4.hua.midnightchannel.net/hua/11" rel="nofollow">看中国</a> | <a href="http://san4.hua.midnightchannel.net/hua/3" rel="nofollow">明慧网</a> | <a href="https://git.io/fjHpq" rel="nofollow">明慧十方</a> | <a href="https://git.io/fj9lQ" rel="nofollow">明慧焦点</a> | <a href="http://san4.hua.midnightchannel.net/hua/9" rel="nofollow">希望之声</a> | <a href="https://git.io/fjHpY" rel="nofollow">漫谈党文化</a ></p><p><a href="http://san4.hua.midnightchannel.net/hua/5" rel="nofollow">新唐人</a> | <a href="https://git.io/JervF" rel="nofollow">亚太台</a> | <a href="https://git.io/fjHpG" rel="nofollow">直播</a> | <a href="https://git.io/fj9lp" rel="nofollow">传奇</a> | <a href="https://git.io/fj9lX" rel="nofollow">神话</a> | <a href="https://git.io/fjHpZ" rel="nofollow">人生</a> | <a href="https://git.io/fjFNJ" rel="nofollow">伪火</a > | <a href="https://git.io/fjHpc" rel="nofollow">真相片</a> | <a href="https://git.io/fj9lK" rel="nofollow">藏字石</a> | <a href="https://git.io/fj9l5" rel="nofollow">短视频</a> | <a href="https://git.io/fjHpW" rel="nofollow">告诉未来</a > | <a href="https://git.io/fjHpl" rel="nofollow">终级目的</a> | <a href="https://git.io/fj9lM" rel="nofollow">中共活摘</a > | <a href="https://git.io/fjHp4" rel="nofollow">风雨天地行</a></p></td></tr><tr><td width="707"><h3><p><strong>文化艺术</strong></p></h3></td><td VALIGN=TOP rowspan=50><a href="https://git.io/fj9l0" target="_blank"><img width="130" src="https://raw.githubusercontent.com/mthry289/djy/master/gb/130/gudianwu.jpg" title="神韵古典舞技巧表演" alt="神韵古典舞技巧表演"></a><br><a href="https://git.io/fj9la" target="_blank"><img width="130" src="https://raw.githubusercontent.com/mthry289/djy/master/gb/130/9ping.jpg" title="九评共产党" alt="九评共产党"></a><br><a href="https://git.io/fj9lr" target="_blank"><img width="130" src="https://raw.githubusercontent.com/mthry289/djy/master/gb/130/communism.jpg" title="共产主义终极目的" alt="共产主义终极目的"></a><br><a href="https://git.io/fjFNJ" target="_blank"><img width="130" src="https://raw.githubusercontent.com/mthry289/djy/master/gb/130/weihuo.jpg" title="中共的伪火骗局" alt="中共的伪火骗局"></a><br><a href="https://git.io/fj9lK" target="_blank"><img width="130" src="https://raw.githubusercontent.com/mthry289/djy/master/gb/130/changzhi.jpg" title="古今奇观-藏字石" alt="古今奇观-藏字石"></a><br><a href="https://git.io/fj9lP" target="_blank"><img width="130" src="https://raw.githubusercontent.com/mthry289/djy/master/gb/130/tianan.jpg" title="通往天安门的旅程" alt="通往天安门的旅程"></a><br><a href="https://git.io/fj9lX" target="_blank"><img width="130" src="https://raw.githubusercontent.com/mthry289/djy/master/gb/130/weilai.jpg" title="未来人的神话" alt="未来人的神话"></a><br><a href="https://git.io/fj9l1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/mthry289/djy/master/gb/130/ji-zy.jpg" title="中共罪恶的活摘" alt="中共罪恶的活摘"></a><br><a href="https://git.io/fj9lM" target="_blank"><img width="130" src="https://raw.githubusercontent.com/mthry289/djy/master/gb/130/huozhai.jpg" title="铁证如山" alt="铁证如山"></a><br><a href="https://git.io/fj9lD" target="_blank"><img width="130" src="https://raw.githubusercontent.com/mthry289/djy/master/gb/130/4ke.jpg" title="一家四口死于中共暴政" alt="一家四口死于中共暴政"></a><br><a href="https://git.io/fj9ly" target="_blank"><img width="130" src="https://raw.githubusercontent.com/mthry289/djy/master/gb/130/jie-di.jpg" title="─弟妹相继死于中共迫害" alt="─弟妹相继死于中共迫害"></a><br><a href="https://git.io/fj9lS" target="_blank"><img width="130" src="https://raw.githubusercontent.com/mthry289/djy/master/gb/130/ma-sj.jpg" title="她们许多已经被中共迫害至死" alt="她们许多已经被中共迫害至死"></a><br><a href="https://git.io/fj9l9" target="_blank"><img width="130" src="https://raw.githubusercontent.com/mthry289/djy/master/gb/130/shuan-cxl.jpg" title="双城血泪" alt="双城血泪"></a><br><a href="https://git.io/fj9lH" target="_blank"><img width="130" src="https://raw.githubusercontent.com/mthry289/djy/master/gb/130/wu-zbh.jpg" title="震撼人心的无罪辩护" alt="震撼人心的无罪辩护"></a><br><a href="https://git.io/fj9lQ" target="_blank"><img width="130" src="https://raw.githubusercontent.com/mthry289/djy/master/gb/130/6c10-720.jpg" title="从610到720" alt="从610到720"></a><br><a href="https://git.io/fj9l7" target="_blank"><img width="130" src="https://raw.githubusercontent.com/mthry289/djy/master/gb/130/xian-z.jpg" title="中共官员的选择" alt="中共官员的选择"></a><br><a href="https://git.io/fj9l5" target="_blank"><img width="130" src="https://raw.githubusercontent.com/mthry289/djy/master/gb/130/1400l.jpg" title="剖析1400例" alt="剖析1400例"></a><br><a href="https://git.io/fj9lb" target="_blank"><img width="130" src="https://raw.githubusercontent.com/mthry289/djy/master/gb/130/425.jpg" title="万人上访真相" alt="万人上访真相"></a><br><a href="https://git.io/fj9lN" target="_blank"><img width="130" src="https://raw.githubusercontent.com/mthry289/djy/master/gb/130/qing-h.jpg" title="被中共迫害的清华学子" alt="被中共迫害的清华学子"></a><br><a href="https://git.io/fj9lx" target="_blank"><img width="130" src="https://raw.githubusercontent.com/mthry289/djy/master/gb/130/jian-z513.jpg" title="见证513" alt="见证513"></a><br><a href="https://git.io/fj9lp" target="_blank"><img width="130" src="https://raw.githubusercontent.com/mthry289/djy/master/gb/130/gongfu.jpg" title="功夫 寻道" alt="功夫 寻道"></a><br><a href="https://git.io/fj9lh" target="_blank"><img width="130" src="https://raw.githubusercontent.com/mthry289/djy/master/gb/130/guangguimian.jpg" title="歌唱家人生奇迹" alt="歌唱家人生奇迹"></a><br><a href="https://git.io/fj9lj" target="_blank"><img width="130" src="https://raw.githubusercontent.com/mthry289/djy/master/gb/130/ming-jjy.jpg" title="名校精英的选择" alt="名校精英的选择"></a><br><a href="https://git.io/fj98e" target="_blank"><img width="130" src="https://raw.githubusercontent.com/mthry289/djy/master/gb/130/yin-lj.jpg" title="音乐之家的故事" alt="音乐之家的故事"></a><br><a href="https://git.io/fj98v" target="_blank"><img width="130" src="https://raw.githubusercontent.com/mthry289/djy/master/gb/130/ming-hsf.jpg" title="平凡中的不平凡" alt="平凡中的不平凡"></a><br><a href="https://github.com/mthry289/www/blob/master/README.md?dfh#9" target="_blank"><img width="130" src="https://raw.githubusercontent.com/mthry289/djy/master/gb/130/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/mthry289/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/mthry289/djy/master/gb/130/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/mthry289/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/mthry289/djy/master/gb/130/huo-z3.jpg" title="警卫目击中共活摘"  alt="警卫目击中共活摘"></a><br><a href="https://github.com/mthry289/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/mthry289/djy/master/gb/130/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/mthry289/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/mthry289/djy/master/gb/130/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/mthry289/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/mthry289/djy/master/gb/130/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/mthry289/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/mthry289/djy/master/gb/130/st1.jpg" title="关注3亿人三退"  alt="关注3亿人三退"></a><br><a href="https://github.com/mthry289/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/mthry289/djy/master/gb/130/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/mthry289/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/mthry289/djy/master/gb/130/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/mthry289/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/mthry289/djy/master/gb/130/sj1.jpg" title="303万人举报江泽民"  alt="303万人举报江泽民"></a><br><a href="https://github.com/mthry289/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/mthry289/djy/master/gb/130/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/mthry289/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/mthry289/djy/master/gb/130/liangan.jpg" title="海峡两岸的强烈反差"  alt="海峡两岸的强烈反差"></a><br><a href="https://github.com/mthry289/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/mthry289/djy/master/gb/130/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/mthry289/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/mthry289/djy/master/gb/130/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/mthry289/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/mthry289/djy/master/gb/130/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/mthry289/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/mthry289/djy/master/gb/130/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/mthry289/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/mthry289/djy/master/gb/130/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/mthry289/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/mthry289/djy/master/gb/130/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/mthry289/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/mthry289/djy/master/gb/130/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/mthry289/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/mthry289/djy/master/gb/130/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/mthry289/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/mthry289/djy/master/gb/130/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/mthry289/www/blob/master/README.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/mthry289/djy/master/gb/130/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr>
+<tr><td><h3><a href="https://github.com/mthry289/djy/blob/master/gb/10/1/19/n2791368.md#1" target="_blank">冥冥之中有定数：状元锦袍之奇梦</a><br></h3><a href="https://github.com/mthry289/djy/blob/master/gb/10/1/19/n2791368.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2018/04/ed366e505f0e0f4f9bf6fa62f93e9a34-150x120.png" align ="left"></a>一天，他做了一个奇梦，梦中他来到一处美妙的地方，那儿的楼台亭阁辉煌壮丽，皆非人间所有。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月10日 9:00 AM			</td></tr>
+<tr><td><h3><a href="https://github.com/mthry289/djy/blob/master/gb/19/12/28/n11751782.md#1" target="_blank">小香姑传奇 菩萨送来的小仙女</a><br></h3><a href="https://github.com/mthry289/djy/blob/master/gb/19/12/28/n11751782.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2012/08/PK2A002815N000000000PAA-150x120.jpg" align ="left"></a>明朝时期，刘家妇人罗氏一天梦到五彩的祥云，在天上簇拥着一个仙女，此仙女穿着绛红的衣服，飘然降于刘家。罗氏怀孕十个月来，家中始终飘散着一股弥漫不绝的奇香。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月10日 9:00 AM			</td></tr>
+<tr><td><h3><a href="https://github.com/mthry289/djy/blob/master/gb/20/1/5/n11769139.md#1" target="_blank">天地清明引(163) 东流水－幕后操手4</a><br></h3><a href="https://github.com/mthry289/djy/blob/master/gb/20/1/5/n11769139.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2018/03/06877c354d4a51fdaf9ed5d296f882eb-150x120.jpg" align ="left"></a>长江两侧，旌旗飘飘。江北，赤旗黑纹，雕镂侯门图腾；江南，蓝旗白条，锦绣云纹游凤。两岸对峙之间，大江东去，浩浩荡荡。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月10日 8:00 AM			</td></tr>
 <tr><td><h3><a href="https://github.com/mthry289/djy/blob/master/gb/19/8/14/n11453593.md#1" target="_blank">【汉武帝传】十二：下罪己诏表心志 与民休息</a><br></h3><a href="https://github.com/mthry289/djy/blob/master/gb/19/8/14/n11453593.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2016/08/415c0d908185fec936288d64d6c20e9e-150x120.jpg" align ="left"></a>汉武帝在位五十四年，一生锐意开拓进取，在文治武功都创下前所未有的功业，将大汉帝国推向一个兴盛的顶峰。然而盛世之下也潜藏着危机，在汉武帝即位大约20年的时候，国家出现了严重的财政危机；到了晚年，他又遭遇了重大变故，携手半生的皇后卫子夫和一手栽培的太子刘据相继自杀，国家一度面临后继无人的困境；再加上朝中再无卫青、霍去病这样.........<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月10日 2:34 AM			</td></tr>
 <tr><td><h3><a href="https://github.com/mthry289/djy/blob/master/gb/20/1/9/n11780309.md#1" target="_blank">麦立：生命</a><br></h3><a href="https://github.com/mthry289/djy/blob/master/gb/20/1/9/n11780309.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2020/01/mily-0110-150x120.jpg" align ="left"></a> 生命是什么 多元 生命是什么 坚韧......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月10日 12:10 AM			</td></tr>
 <tr><td><h3><a href="https://github.com/mthry289/djy/blob/master/gb/20/1/8/n11776359.md#1" target="_blank">简化汉字“圣”包藏什么祸心？</a><br></h3><a href="https://github.com/mthry289/djy/blob/master/gb/20/1/8/n11776359.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2020/01/15793a81df37b056ebd657ca85f82b6e-150x120.png" align ="left"></a>中共以变异了的简体字，改造使用者的道德观念与人生价值，“妖魔化”人心！怎么说呢？让我们从古人字来还原一些汉字中的“英雄本色”，识破中共的简体字如何“妖魔化”人心的企图。本文来说“圣”人。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月09日 5:50 PM			</td></tr>
@@ -28,14 +31,9 @@
 责任编辑：李欧......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月07日 2:18 AM			</td></tr>
 <tr><td><h3><a href="https://github.com/mthry289/djy/blob/master/gb/20/1/6/n11772885.md#1" target="_blank">作文选登：助人最快乐</a><br></h3><a href="https://github.com/mthry289/djy/blob/master/gb/20/1/6/n11772885.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2020/01/420485_medium-150x120.jpg" align ="left"></a>每一次，只要我帮助别人的时候，我的心里会感到暖暖的。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月07日 1:31 AM			</td></tr>
 <tr><td><h3><a href="https://github.com/mthry289/djy/blob/master/gb/19/12/25/n11745420.md#1" target="_blank">北京北新桥锁龙井里真有龙吗？</a><br></h3><a href="https://github.com/mthry289/djy/blob/master/gb/19/12/25/n11745420.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2020/01/20090528_Beijing_Nine_Dragon_Wall_7992-150x120.jpg" align ="left"></a>我现年65岁。距北京北新桥的锁龙井300米左右，就是我出生的地方，即老北京东城区的交道口大头条胡同33号。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月07日 12:52 AM			</td></tr>
-<tr><td><h3><a href="https://github.com/mthry289/djy/blob/master/gb/20/1/6/n11772611.md#1" target="_blank">青松絮语：根源在身后</a><br></h3><a href="https://github.com/mthry289/djy/blob/master/gb/20/1/6/n11772611.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2016/10/Fotolia_122805888_Subscription_L-e1476465105622-150x120.jpg" align ="left"></a>有时候，出现问题，我们便就问题开始深究，试图找到根源，因为只有找到根源才能解决问题。然而，真正的根源往往不在眼前，而是在我们意想不到的身后。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月06日 10:14 PM			</td></tr>
 <tr><td><h3><a href="https://github.com/mthry289/djy/blob/master/gb/20/1/8/n11777458.md#1" target="_blank">五律：雪</a><br></h3> 冰心天使者，妩媚玉夫人。 系与寒梅客，情由嫩柳春。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月09日 12:20 AM			</td></tr>
 <tr><td><h3><a href="https://github.com/mthry289/djy/blob/master/gb/20/1/8/n11777442.md#1" target="_blank">诗歌：韵满弓刀</a><br></h3> 风利如刀月满弓， 云长若带缚红龙。 除魔笔上冲天鹤， 古韵行间啸铁骢！......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月08日 11:27 PM			</td></tr>
 <tr><td><h3><a href="https://github.com/mthry289/djy/blob/master/gb/20/1/7/n11774989.md#1" target="_blank">七绝：响雪</a><br></h3> 雪落三更响玉声， 雄鸡骤起九千鸣。 风摇树挂悬银剑， 横扫人间路不平！......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月07日 11:45 PM			</td></tr>
 <tr><td><h3><a href="https://github.com/mthry289/djy/blob/master/gb/20/1/7/n11774926.md#1" target="_blank">七律：寄白居易</a><br></h3> 作诗如话多深味，愁唱醉吟悲抚桐。 杨柳千姿舞腰细，樱桃一点似唇红。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月07日 11:16 PM			</td></tr>
-<tr><td><h3><a href="https://github.com/mthry289/djy/blob/master/gb/20/1/6/n11772770.md#1" target="_blank">诗歌：咏雪二首</a><br></h3> 一 玉殿琼楼下九重， 千树梨花舞寒风。 谁说严冬欠佳色， 银装素裹也怡情！......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月07日 12:34 AM			</td></tr>
-<tr><td><h3><a href="https://github.com/mthry289/djy/blob/master/gb/20/1/6/n11772696.md#1" target="_blank">童诗：破了一个洞</a><br></h3>啵！爸爸的外套破了一个洞
-用针缝一缝 
-心破了洞，可以补起来吗?......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月06日 11:24 PM			</td></tr>
 <tr><td><h3><a href="https://github.com/mthry289/djy/blob/master/gb/news2007_3.md#1">上一页</a>&nbsp;&nbsp;<a href="https://github.com/mthry289/djy/blob/master/gb/news2007.md#1">1</a>&nbsp;&nbsp;<a href="https://github.com/mthry289/djy/blob/master/gb/news2007_2.md#1">2</a>&nbsp;&nbsp;<a href="https://github.com/mthry289/djy/blob/master/gb/news2007_3.md#1">3</a>&nbsp;&nbsp;4&nbsp;&nbsp;<a href="https://github.com/mthry289/djy/blob/master/gb/news2007_5.md#1">5</a>&nbsp;&nbsp;<a href="https://github.com/mthry289/djy/blob/master/gb/news2007_6.md#1">6</a>&nbsp;&nbsp;<a href="https://github.com/mthry289/djy/blob/master/gb/news2007_7.md#1">7</a>&nbsp;&nbsp;<a href="https://github.com/mthry289/djy/blob/master/gb/news2007_8.md#1">8</a>&nbsp;&nbsp;<a href="https://github.com/mthry289/djy/blob/master/gb/news2007_9.md#1">9</a>&nbsp;&nbsp;<a href="https://github.com/mthry289/djy/blob/master/gb/news2007_10.md#1">10</a>&nbsp;&nbsp;<a href="https://github.com/mthry289/djy/blob/master/gb/news2007_5.md#1">下一页</a></h3></td></tr>
 </table><h4>手机上长按并复制下列链接或二维码分享本文章：</h4>https://github.com/mthry289/djy/blob/master/gb/news2007_4.md#1<br><a href="https://github.com/mthry289/djy/blob/master/gb/news2007_4.md#1"><img src="http://d1p1.ip.zn2.us/v.php?action=qrcode&url=https://github.com/mthry289/djy/blob/master/gb/news2007_4.md%231" title="分享本文章"></a><br>原文地址： <a href="http://www.epochtimes.com/gb/news2007_4.htm">http://www.epochtimes.com/gb/news2007_4.htm</a>    （国内需<a href="https://git.io/JesJV">下载翻墙软件</a>才能访问）</p>
