--- a/gb/nf3046_3.md
+++ b/gb/nf3046_3.md
@@ -24,6 +24,7 @@
 
 
 周六上午，大洛杉.........<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年10月14日 3:21 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/mthry289/djy/blob/master/gb/19/11/12/n11649670.md#1" target="_blank">每日三退声明精选（2019/11/11）</a><br></h3>我们知道了必须退队的原因，最近香港被大陆(中共)害的好惨，我老公是逃港人员，我每天祈祷老天保佑香港。感谢法轮功讲真话，法轮大法好！......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月12日 12:18 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/mthry289/djy/blob/master/gb/19/11/11/n11646787.md#1" target="_blank">每日三退声明精选（2019/11/10）</a><br></h3>我过去被中共欺骗，蒙骗过。但是我不光光看到他们虚伪的嘴脸，而且也看到了后来他们企图消灭人类自由的邪恶计划，尤其是中共前宗教局局长的事情让我更加对他们感到厌恶和气愤。我也回想了自己以前被中共洗脑的东西，其实感觉得到自己是被强迫的，自己心里也不认同这些东西。我是相信基督的，我决定在这里公开退出共产党、退出共青团和退出少先队，永远抛弃共产邪说，摆脱邪灵。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月11日 11:50 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/mthry289/djy/blob/master/gb/19/11/9/n11643329.md#1" target="_blank">每日三退声明精选（2019/11/08）</a><br></h3>我并非不理解那种功利的选择考虑，而是对共产党怀有一种强烈的抵触甚至恐惧。反右，大饥荒，文革，六四，我不能理解一个口口声声宣称代表最广大人民根本利益的党怎能视生命如草芥，频繁对人民亮出屠刀，亲手制造一处处人间地狱？党是上一代人命里的劫，是很多前辈终生的噩梦。但我希望乌云能就此散去，至少让我们救救孩子……最后，在此我宣布退出z中学时加入的共青团组织。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月09日 10:10 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/mthry289/djy/blob/master/gb/19/11/8/n11641035.md#1" target="_blank">每日三退声明精选（2019/11/07）</a><br></h3>从小的时候就听共产党的教育，后来到了中学时期，从中共的腐败的的事情看出这个政权完全是欺骗这片土地上的人们的伪政权，在私下里拜访过受中共迫害的人，才知这个政权岂止是劣迹斑斑，简直就是罪恶滔天、罄竹难书、人神共愤。现声明与中共势不两立。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月08日 11:45 AM							</td></tr>
@@ -50,6 +51,5 @@
 <tr><td><h3><a href="https://github.com/mthry289/djy/blob/master/gb/19/10/13/n11584815.md#1" target="_blank">每日三退声明精选（2019/10/12）</a><br></h3>现在终于看到中共可怕的地方在于，一日不除这个恶魔，全部华人都得遭殃。看看现在全世界对华人的印象和限制，很多时候都是因为中共。还有很多海外的大陆华人被中共的毒素中毒颇深，连马化腾、马云等富人的命运都不足以唤醒他们。我觉得很可怕，真的很邪恶。为了给自己一个安全的未来，本人在此在精神上和身份上退出中共党团队，脱离中共的辖制，抛弃邪恶，走向自由！......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年10月13日 11:03 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/mthry289/djy/blob/master/gb/19/10/11/n11581660.md#1" target="_blank">每日三退声明精选（2019/10/10）</a><br></h3>上学时被欺骗加入少先队组织，中共说血旗是血染成的，中共的政权确实是建立在苦难的中国民众的累累白骨之上的。在这个意义上塔利班去北京只是去膜拜祖师爷去的，也许它们想从中共那里学到，如何像中共在香港一样无恶不作制造巨大恐怖效应，但又不受到惩罚。中共用一个字：邪；两个字：邪教；三个字：假、恶、斗；四个字：邪恶至极；五个字：马克思主义；九个字：邪、骗、扇、斗、抢、痞、.........<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年10月11日 10:58 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/mthry289/djy/blob/master/gb/19/10/10/n11579638.md#1" target="_blank">每日三退声明精选（2019/10/09）</a><br></h3>我是大陆某著名风景区的居民，在外地做生意多年后回家，想申请在自己的宅基地上盖房子，没想到村干部说不行，后来再申请，村干部说拿过来一万块后再说。这些村干部家里的钱都花不完还给家人整上低保，村里的贫困户申请低保却整不来。这就是当今中国大陆的世道，老百姓无处伸冤，可以说中共邪党就是当今中国最大的黑社会，在此，我声明退出中共邪党的少先队等邪恶组织。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年10月10日 10:08 AM							</td></tr>
-<tr><td><h3><a href="https://github.com/mthry289/djy/blob/master/gb/19/10/9/n11577482.md#1" target="_blank">每日三退声明精选（2019/10/08）</a><br></h3>年少无知，被择入党，虽对形式化流程和众多事件模糊的新闻观点甚感蹊跷，心有疑惑，也只能且信之。如今明白很多的真相，在此声明：愿集权统治尽早消失，愿我中华人民获得天赋人权，愿全世界人民幸福安康。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年10月09日 11:18 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/mthry289/djy/blob/master/gb/nf3046_2.md#1">上一页</a>&nbsp;&nbsp;<a href="https://github.com/mthry289/djy/blob/master/gb/nf3046.md#1">1</a>&nbsp;&nbsp;<a href="https://github.com/mthry289/djy/blob/master/gb/nf3046_2.md#1">2</a>&nbsp;&nbsp;3&nbsp;&nbsp;<a href="https://github.com/mthry289/djy/blob/master/gb/nf3046_4.md#1">4</a>&nbsp;&nbsp;<a href="https://github.com/mthry289/djy/blob/master/gb/nf3046_5.md#1">5</a>&nbsp;&nbsp;<a href="https://github.com/mthry289/djy/blob/master/gb/nf3046_6.md#1">6</a>&nbsp;&nbsp;<a href="https://github.com/mthry289/djy/blob/master/gb/nf3046_7.md#1">7</a>&nbsp;&nbsp;<a href="https://github.com/mthry289/djy/blob/master/gb/nf3046_8.md#1">8</a>&nbsp;&nbsp;<a href="https://github.com/mthry289/djy/blob/master/gb/nf3046_9.md#1">9</a>&nbsp;&nbsp;<a href="https://github.com/mthry289/djy/blob/master/gb/nf3046_10.md#1">10</a>&nbsp;&nbsp;<a href="https://github.com/mthry289/djy/blob/master/gb/nf3046_4.md#1">下一页</a></h3></td></tr>
 </table><h4>手机上长按并复制下列链接或二维码分享本文章：</h4>https://github.com/mthry289/djy/blob/master/gb/nf3046_3.md#1<br><a href="https://github.com/mthry289/djy/blob/master/gb/nf3046_3.md#1"><img src="http://d1p1.ip.zn2.us/v.php?action=qrcode&url=https://github.com/mthry289/djy/blob/master/gb/nf3046_3.md%231" title="分享本文章"></a><br>原文地址： <a href="http://www.epochtimes.com/gb/nf3046_3.htm">http://www.epochtimes.com/gb/nf3046_3.htm</a>    （国内需<a href="https://git.io/JesJV">下载翻墙软件</a>才能访问）</p>
